# gdoc

./: .gitignore  CHANGELOG.md  README.md  gdoc.md  pyproject.toml
gdoc/: __init__.py  auth.py  cli.py  diffdocx.py  diffrender.py  frontmatter.py  mdimport.py  mdparse.py  notify.py  revdiff.py  state.py  update.py  util.py
gdoc/api/: __init__.py  comments.py  docs.py  drive.py  revisions.py  sheets.py
tests/: conftest.py  test_api_docs.py  test_api_revisions.py  test_auth.py  test_cat.py  test_cat_revision.py  test_cat_tabs.py  test_diff_rev_cmd.py  test_diffdocx.py  test_diffrender.py  test_edit.py  test_edit_cell.py  test_frontmatter.py  test_mdimport.py  test_mdparse.py  test_push.py  test_revdiff.py  test_revisions_cmd.py  test_sheets_api.py  test_sheets_cmd.py  test_state.py  test_sync_hook.py  test_tabs_cmd.py  test_update_version.py  test_util.py  test_write.py
