[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "gdoc"
version = "0.11.0"
description = "Token-efficient CLI for Google Docs & Drive"
requires-python = ">=3.10"
dependencies = [
    "google-api-python-client>=2.150.0",
    "google-auth-oauthlib>=1.2.1",
    "google-auth-httplib2>=0.2.0",
    # Used directly via google.auth.transport.requests for revision
    # exportLinks downloads; previously only a transitive dependency.
    "requests>=2.28",
]

[project.scripts]
gdoc = "gdoc.cli:main"

[project.optional-dependencies]
docx = [
    "python-docx>=1.1.0",
]
dev = [
    "pytest>=8.0",
    "pytest-mock>=3.14",
    "ruff>=0.8.0",
    "python-docx>=1.1.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v --tb=short"

[tool.ruff]
target-version = "py310"
line-length = 88

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]
